e-commerce-namespace.yml
# Create namespace for e-commerce
apiVersion: v1
kind: Namespace
metadata:
  name: e-commerce
  labels: # Add a label to make it easy to identify
    app: e-commerce
    # Enable Istio. NOTE: If failed, remember to install Istio using "default" profile.
    # https://istio.io/latest/docs/setup/getting-started/
    istio-injection: enabled
