e-commerce-order-module.yml
# Create order module service
apiVersion: v1
kind: Service
metadata:
  name: order-module-service
  namespace: e-commerce # Add it to "e-commerce" namespace
  labels: # Add a label to make it easy to identify
    app: e-commerce
    module: order
spec:
  selector: # Match it to pod labes
    app: e-commerce
    module: order
  ports:
    - port: 3000 # Map port 3000 on host
      targetPort: order-module # To port named "order-module"
  type: NodePort
---
# Create order module deployment
# NOTE: If deployment failed to start, usually because RabbitMQ credential set incorrectly.
#  Please refer to e-commerce-secret.yml to set them properly. Afterward, rerun "./bin/setup".
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-module-deployment
  namespace: e-commerce # Add it to "e-commerce" namespace
  labels: # Add a label to make it easy to identify. Label for deployment itself.
    app: e-commerce
    module: order
spec:
  replicas: 1
  selector:
    matchLabels: # Match label to pod labels
      app: e-commerce
      module: order
  template:
    metadata:
      labels: # Labels for pod
        app: e-commerce
        module: order
    spec:
      containers:
        - name: order
          image: ghcr.io/mbishram/e-commerce-order-service:latest # Use image from GitHub Packages
          ports:
            - containerPort: 3000 # Open port 3000
              name: order-module # Name it to make it easier to refer to
