e-commerce-shipping-module.yml
# Create shipping module service
apiVersion: v1
kind: Service
metadata:
  name: shipping-module-service
  namespace: e-commerce # Add it to "e-commerce" namespace
  labels: # Add a label to make it easy to identify
    app: e-commerce
    module: shipping
spec:
  selector: # Match it to pod labes
    app: e-commerce
    module: shipping
  ports:
    - port: 3001 # Map port 3000 on host
      targetPort: shipping-module # To port named "shipping-module"
  type: NodePort
---
# Create shipping module deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-module-deployment
  namespace: e-commerce # Add it to "e-commerce" namespace
  labels: # Add a label to make it easy to identify. Label for deployment itself.
    app: e-commerce
    module: shipping
spec:
  replicas: 1
  selector:
    matchLabels: # Match label to pod labels
      app: e-commerce
      module: shipping
  template:
    metadata:
      labels: # Labels for pod
        app: e-commerce
        module: shipping
    spec:
      containers:
        - name: shipping
          image: ghcr.io/mbishram/e-commerce-shipping-service:latest # Use image from GitHub Packages
          ports:
            - containerPort: 3001 # Open port 3000
              name: shipping-module # Name it to make it easier to refer to
